fixed overflow

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -38,6 +38,8 @@ html,
 body {
   scroll-behavior: smooth;
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
   /* min-width: 400px; */
   width: 100%;
   min-height: 100%;
